# backend

./: README.md  app.py  app_chat.py  build_subset.py  check_subset.py  config.py  debug_local_queries.py  pyproject.toml
routes/: chat.py  graph_routes.py
services/: agent_graph.py  citation_network.py  collaboration_network.py  dashboard.py  data_loader.py  data_loader_chat.py  orchestrator.py  tools.py
subset_data/: psu_affiliations.parquet  psu_authors.parquet  psu_fields.parquet  psu_paper_authors.parquet  psu_paper_fields.parquet  psu_papers.parquet  psu_references.parquet
